--- a/package.json
+++ b/package.json
@@ -6,17 +6,19 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^1.4.0",
-    "@heroicons/react": "^1.0.4",
-    "next": "^11.1.0",
+    "@apollo/client": "^3.5.9",
+    "axios": "^0.26.0",
+    "graphql": "^16.3.0",
+    "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass": "^1.38.2",
-    "swiper": "^6.7.5"
+    "swiper": "^6.7.5",
+    "swr": "^1.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.7",
+    "tailwindcss": "^3.0.23"
   }
 }
