--- a/package.json
+++ b/package.json
@@ -6,9 +6,8 @@
     "start": "next start"
   },
   "dependencies": {
-    "@apollo/client": "^3.5.9",
     "axios": "^0.26.0",
-    "graphql": "^16.3.0",
+    "lodash": "^4.17.21",
     "next": "^12.1.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
