--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "@headlessui/react": "^1.4.0",
+    "@heroicons/react": "^1.0.4",
     "lodash": "^4.17.21",
     "next": "^12.1.0",
     "react": "^17.0.2",
