--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.26.0",
     "@headlessui/react": "^1.4.0",
     "@heroicons/react": "^1.0.4",
+    "axios": "^0.26.0",
     "lodash": "^4.17.21",
     "next": "^12.1.0",
     "react": "^17.0.2",
@@ -18,8 +18,11 @@
     "swr": "^1.2.0"
   },
   "devDependencies": {
+    "@types/node": "^17.0.42",
+    "@types/react": "^18.0.12",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.7",
-    "tailwindcss": "^3.0.23"
+    "tailwindcss": "^3.0.23",
+    "typescript": "^4.7.3"
   }
 }
