--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "@types/react": "^18.0.12",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.7",
-    "tailwindcss": "^3.0.23",
-    "typescript": "^4.7.3"
+    "tailwindcss": "^3.0.23"
   }
 }
